# pyfastspm

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg
docs/: API_reference.rst  Makefile  conf.py  contributing.rst  guide.rst  index.rst  installation.rst  make.bat
examples/: pyfastspm_converter.ipynb
pyfastspm/: __init__.py  fast_movie.py
pyfastspm/artefact_removal/: conv_mat.py  creep.py  drift.py  fft.py  interpolate.py
pyfastspm/tools/: decorators.py  error_catcher.py  exporter.py  file_handling_tools.py  frame_artists.py
pyfastspm/tracking/: pixel_trace.py
tests/: .dockerignore  Dockerfile  environment-dev.yml  test_multi_frame.npy  test_single_frame.npy  test_tools.py
