[metadata]
name = pyfastspm
version = attr: pyfastspm.version.__version__
description = A python package for loading, processing and exporting scanning probe microscopy movies acquired with the FAST unit.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT
author = Carlo Dri
author_email = carlo.dri@gmail.com
url = https://gitlab.com/fastspm/pyfastspm
project_urls =
    Issue Tracker = https://gitlab.com/fastspm/pyfastspm/-/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    pillow
    tqdm
    h5py
    packaging
    scikit-image

[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.ttf

[flake8]
ignore = E266, E501, W503
extend-ignore = E203
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
